syntax = "proto3";

package pgcapture;
option go_package = "github.com/replicase/pgcapture/pkg/pb";

import "google/protobuf/struct.proto";
import "google/protobuf/duration.proto";

message Checkpoint {
  uint64 lsn = 1;
  uint32 seq = 2;
  bytes data = 3;
}

message Message {
  oneof type {
    Begin begin = 1;
    Commit commit = 2;
    Change change = 3;
    Custom custom = 4;
  }
}

message Begin {
  uint64 final_lsn = 1;
  uint64 commit_time = 2;
  uint32 remote_xid = 3;
}

message Commit {
  uint64 commit_lsn = 1;
  uint64 end_lsn = 2;
  uint64 commit_time = 3;
}

message Change {
  enum Operation {
    INSERT = 0;
    UPDATE = 1;
    DELETE = 2;
  }
  Operation op = 1;
  string schema = 2;
  string table = 3;
  repeated Field new = 4;
  repeated Field old = 5;
}

message Custom {
  string prefix = 1;
  bytes content = 2;
}

message Field {
  string name = 1;
  uint32 oid = 2;
  oneof value {
    bytes binary = 3;
    string text = 4;
  }
}

service DBLogGateway {
  rpc Capture(stream CaptureRequest) returns (stream CaptureMessage);
}

service DBLogController {
  rpc PullDumpInfo(stream DumpInfoRequest) returns (stream DumpInfoResponse);
  rpc Schedule(ScheduleRequest) returns (ScheduleResponse);
  rpc StopSchedule(StopScheduleRequest) returns (StopScheduleResponse);
  rpc SetScheduleCoolDown(SetScheduleCoolDownRequest) returns (SetScheduleCoolDownResponse);
}

message CaptureRequest {
  oneof type {
    CaptureInit init = 1;
    CaptureAck ack = 2;
  }
}

message CaptureInit {
  string uri = 1;
  google.protobuf.Struct parameters = 2;
}

message CaptureAck {
  Checkpoint checkpoint = 1;
  string requeue_reason = 2;
}

message CaptureMessage {
  Checkpoint checkpoint = 1;
  Change change = 2;
}

message DumpInfoRequest {
  string uri = 1;
  string requeue_reason = 2;
}

message DumpInfoResponse {
  string schema = 1;
  string table = 2;
  uint32 page_begin = 3;
  uint32 page_end = 4;
}

message ScheduleRequest {
  string uri = 1;
  repeated DumpInfoResponse dumps = 2;
}

message ScheduleResponse {

}

message StopScheduleRequest {
  string uri = 1;
}

message StopScheduleResponse {

}

message SetScheduleCoolDownRequest {
  string uri = 1;
  google.protobuf.Duration duration = 2;
}

message SetScheduleCoolDownResponse {

}

service Agent {
  rpc Configure(AgentConfigRequest) returns (AgentConfigResponse) {}
  rpc Dump(AgentDumpRequest) returns (AgentDumpResponse) {}
  rpc StreamDump(AgentDumpRequest) returns (stream Change) {}
}

message AgentDumpRequest {
  uint64 min_lsn = 1;
  DumpInfoResponse info = 2;
}

message AgentDumpResponse {
  repeated Change change = 1;
}

message AgentConfigRequest {
  google.protobuf.Struct parameters = 1;
}
message AgentConfigResponse {
  google.protobuf.Struct report = 1;
}